# hstreamdb-rust

./: .gitmodules  Cargo.toml  Makefile  README.md  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.config/: hakari.toml
.github/workflows/: ci.yml
src/hstreamdb/: Cargo.toml
src/hstreamdb-pb/: Cargo.toml  build.rs
src/hstreamdb-pb/src/: lib.rs
src/hstreamdb/src/: appender.rs  channel_provider.rs  client.rs  common.rs  consumer.rs  flow_controller.rs  lib.rs  producer.rs  reader.rs  test_utils.rs  tls.rs  utils.rs
src/hstreamdb/tests/: common.rs  consumer_test.rs  integration_test.rs  producer_test.rs  tls_test.rs
src/utils/hstreamdb-test-utils/: Cargo.toml
src/utils/hstreamdb-test-utils/src/: lib.rs  test_containers.rs
src/utils/workspace-hack/: Cargo.toml
src/x/hstreamdb-erl-nifs/: Cargo.toml
src/x/hstreamdb-erl-nifs/src/: lib.rs  runtime.rs
x/hstreamdb_erl/: rebar.config
x/hstreamdb_erl/src/: hstreamdb.erl  hstreamdb_erl.app.src  hstreamdb_erl.erl
