[package]
edition = "2021"
name = "hstreamdb-pb"
version = "0.1.0"

license = "BSD-3-Clause"
description = "Rust protocol library for HStreamDB"
homepage = "https://hstream.io/"
repository = "https://github.com/hstreamdb/hstreamdb-rust"
readme = "README.md"
keywords = ["hstreamdb", "streaming-database", "database-client"]

[dependencies]
prost = "0.11.0"
prost-types = "0.11.1"
tonic = "0.8.0"
workspace-hack = { version = "0.1", path = "../utils/workspace-hack" }

[build-dependencies]
tonic-build = "0.8.0"
