[package]
edition = "2021"
name = "hstreamdb"
version = "0.2.3"

license = "BSD-3-Clause"
description = "Rust client library for HStreamDB"
homepage = "https://hstream.io/"
repository = "https://github.com/hstreamdb/hstreamdb-rust"
readme = "README.md"
keywords = ["hstreamdb", "streaming-database", "database-client"]

[dependencies]
thiserror = "1.0.38"
log = "0.4.17"

flate2 = "1.0.25"
zstd = "0.12.2"

num-bigint = "0.4.3"
num-traits = "0.2.15"
md-5 = "0.10.5"

hstreamdb-pb = { version = "0.3.0", path = "../hstreamdb-pb/" }
prost-types = "0.11.6"

prost = "0.11.6"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "parking_lot"] }
tokio-stream = "0.1.11"
tonic = { version = "0.8.3", features = ["tls"] }
url = "2.3.1"
workspace-hack = { version = "0.1", path = "../utils/workspace-hack" }

[dev-dependencies]
hstreamdb-test-utils = { path = "../utils/hstreamdb-test-utils" }

anyhow = "1.0.68"
env_logger = "0.10.0"
rand = "0.8.5"
