[package]
name = "hstreamdb-erl-nifs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
workspace-hack = { version = "0.1", path = "../../utils/workspace-hack" }
hstreamdb = { path = "../../hstreamdb" }

log = "0.4.17"
env_logger = "0.9.0"

once_cell = "1.14.0"
rustler = "0.26.0"
tokio = { version = "1.21.0", features = ["rt-multi-thread"] }
