[package]
name = "hstreamdb-erl-nifs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
workspace-hack = { version = "0.1", path = "../../utils/workspace-hack" }
hstreamdb = { path = "../../hstreamdb" }

log = "0.4.17"
env_logger = "0.10.0"

once_cell = "1.17.0"
rustler = "0.27.0"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "parking_lot"] }
tokio-stream = "0.1.11"

prost = "0.11.6"
tonic = "0.8.3"
